--- a/wash-cloth.html
+++ b/wash-cloth.html
@@ -767,7 +767,6 @@
             <div class="navbar">
                 <div class="logo">
                     <img src="images/logo-wit@2x.png" alt="Dimple Logo" class="logo-image">
-                    <span class="logo-tagline">Est. 1991</span>
                 </div>
                 
                 <nav class="nav-menu">
@@ -804,7 +803,6 @@
         <div class="mobile-nav-header">
             <div class="logo">
                 <img src="images/logo-wit@2x.png" alt="Dimple Logo" class="logo-image">
-                <span class="logo-tagline">Est. 1991</span>
             </div>
             <button class="mobile-nav-close" id="mobileNavClose">×</button>
         </div>
@@ -1109,7 +1107,7 @@
                         </p>
                     </div>
                     <div class="cta-button-wrapper">
-                        <button class="machines-cta-button">
+                        <button class="machines-cta-button" data-action="get-more-info">
                             <span class="cta-text">Get More Information</span>
                             <span class="cta-icon">→</span>
                         </button>
@@ -1131,7 +1129,6 @@
                     <div class="footer-brand">
                         <div class="footer-logo">
                             <img src="images/logo-wit@2x.png" alt="Dimple Logo" class="logo-image">
-                            <span class="logo-tagline">Est. 1991</span>
                         </div>
                         <p class="footer-description">
                             Specialists in non-woven fabrics, delivering industrial excellence since 1991.
@@ -1141,8 +1138,9 @@
                     <div class="footer-contact">
                         <h4>Get In Touch</h4>
                         <div class="contact-info">
-                            <a href="mailto:info@dimple.com" class="contact-link">info@dimple.com</a>
+                            <a href="mailto:info@dimple.nl" class="contact-link">info@dimple.nl</a>
                             <a href="tel:+31123456789" class="contact-link">+31 12 345 6789</a>
+                            <span class="contact-address">Schieland 18, 1948 RM Beverwijk</span>
                             <span class="contact-location">Netherlands</span>
                         </div>
                     </div>
@@ -1150,21 +1148,31 @@
                 
                 <div class="footer-bottom">
                     <div class="footer-copyright">
-                        <p>&copy; 2024 Dimple BV. All rights reserved.</p>
+                        <p>&copy; 2025 Dimple BV. All rights reserved.</p>
                     </div>
                     <div class="footer-social">
-                        <a href="https://www.linkedin.com/company/dimple-bv" class="social-link" target="_blank" rel="noopener">LinkedIn</a>
-                        <a href="index.html#contact" class="social-link">Contact</a>
+                        <a href="https://www.linkedin.com/in/g%C3%A9-limmen-9379a8/?originalSubdomain=nl" class="social-link" target="_blank" rel="noopener">
+                            <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
+                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                            </svg>
+                            <span>LinkedIn</span>
+                        </a>
+                        <a href="mailto:info@dimple.nl" class="social-link">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20">
+                                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+                                <polyline points="22,6 12,13 2,6"/>
+                            </svg>
+                            <span>Contact</span>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
 
-    <!-- Floating "Dimple on Video" Button -->
-    <a href="index.html" class="floating-video-btn">
+    <!-- Floating Video Button -->
+    <a href="index.html" class="floating-video-btn" title="Watch Dimple Video">
         <div class="floating-video-icon"></div>
-        <span class="floating-video-text">Dimple on Video</span>
     </a>
 
     <script src="script.js"></script>
