--- a/about.html
+++ b/about.html
@@ -1385,6 +1385,7 @@
     <!-- Floating Video Button -->
     <a href="index.html" class="floating-video-btn" title="Watch Dimple Video">
         <div class="floating-video-icon"></div>
+        <span class="floating-video-text">Dimple on Video</span>
     </a>
 
     <!-- JavaScript -->
