--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
             <div class="about-hero-content">
                 <div class="hero-text">
                     <h1 class="hero-title">
-                        <span class="title-line">Industrial</span>
+                        <span class="title-line">Welcome to</span>
                         <span class="title-main">Dimple</span>
                         <span class="title-subtitle">Non-Woven Fabric Specialists Since 1991</span>
                     </h1>
