--- a/about.html
+++ b/about.html
@@ -216,10 +216,10 @@
             align-items: center;
             gap: 10px;
             padding: 12px 20px;
-            background: rgba(255, 255, 255, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            background: transparent;
+            border: none;
             border-radius: 25px;
-            color: var(--light-green);
+            color: #0077B5;
             text-decoration: none;
             font-size: clamp(0.75rem, 1vw, 0.85rem);
             font-weight: 500;
@@ -246,29 +246,28 @@
         }
 
         .ceo-linkedin-btn:hover {
-            background: rgba(255, 255, 255, 0.15);
-            border-color: rgba(255, 255, 255, 0.3);
+            background: #0077B5;
             transform: translateY(-2px);
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 8px 25px rgba(0, 119, 181, 0.3);
         }
 
         .ceo-linkedin-btn .linkedin-icon {
-            color: var(--accent-green);
+            color: #0077B5;
             transition: all var(--transition-fast);
         }
 
         .ceo-linkedin-btn:hover .linkedin-icon {
-            color: var(--bright-green);
+            color: white;
             transform: scale(1.1);
         }
 
         .ceo-linkedin-btn .linkedin-text {
-            color: var(--light-green);
+            color: #0077B5;
             transition: color var(--transition-fast);
         }
 
         .ceo-linkedin-btn:hover .linkedin-text {
-            color: var(--bright-green);
+            color: white;
         }
 
         /* Quote Section - matching hero section overlay treatment */
