--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         /* Clean Video Section */
         .video-section {
             width: 100%;
-            max-width: min(1000px, 94vw);
+            max-width: min(1200px, 96vw);
             margin-bottom: clamp(0.3rem, 1vh, 0.8rem);
             animation: videoFadeIn 1s ease-out 0.6s both;
             flex-shrink: 1;
@@ -245,7 +245,7 @@
             justify-content: center;
             align-items: center;
             padding: 0 clamp(0.1rem, 0.8vw, 0.4rem);
-            max-height: clamp(320px, 40vh, 580px);
+            max-height: clamp(400px, 50vh, 700px);
         }
 
         .video-container {
@@ -268,7 +268,7 @@
             aspect-ratio: 16/9;
             display: block;
             border-radius: 12px;
-            max-height: clamp(320px, 40vh, 580px);
+            max-height: clamp(400px, 50vh, 700px);
             object-fit: cover;
         }
 
@@ -428,7 +428,7 @@
 
             .video-section {
                 margin-bottom: clamp(1rem, 3vh, 2rem);
-                max-width: min(650px, 85vw);
+                max-width: min(750px, 88vw);
             }
 
             .welcome-title {
@@ -517,12 +517,12 @@
 
             .video-section {
                 margin-bottom: clamp(0.4rem, 1.2vh, 0.8rem);
-                max-width: min(440px, 90vw);
-                max-height: clamp(180px, 22vh, 280px);
+                max-width: min(500px, 92vw);
+                max-height: clamp(220px, 28vh, 320px);
             }
 
             .explainer-video {
-                max-height: clamp(180px, 22vh, 280px);
+                max-height: clamp(220px, 28vh, 320px);
             }
 
             .video-container {
@@ -630,13 +630,13 @@
             }
 
             .video-section {
-                max-width: min(360px, 88vw);
+                max-width: min(400px, 90vw);
                 margin-bottom: clamp(0.3rem, 1vh, 0.6rem);
-                max-height: clamp(160px, 20vh, 220px);
+                max-height: clamp(180px, 24vh, 260px);
             }
 
             .explainer-video {
-                max-height: clamp(160px, 20vh, 220px);
+                max-height: clamp(180px, 24vh, 260px);
             }
 
             .video-container {
@@ -1495,7 +1495,7 @@
             <div class="video-section">
                 <div class="video-container">
                     <video id="explainerVideo" class="explainer-video" controls preload="metadata" aria-label="Dimple Company Overview Video">
-                        <source src="explainer.mp4" type="video/mp4">
+                        <source src="dimplebv_explainer.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
