--- a/wash-cloth.html
+++ b/wash-cloth.html
@@ -1384,9 +1384,9 @@
                     </div>
                     <a href="formula1.html" class="nav-link">Formula 1</a>
                                 <a href="home.html#pricing" class="nav-link">Pricing</a>
-            <a href="customer-service.html" class="nav-link">Customer Service</a>
-            <a href="home.html#brochures" class="nav-link">Brochures</a>
-            <a href="home.html#contact" class="nav-contact-button">Contact</a>
+                                <a href="customer-service.html#contact" class="nav-link">Customer Service</a>
+                                <a href="brochures.html" class="nav-link">Brochures</a>
+                    <a href="customer-service.html" class="nav-contact-button">Contact</a>
                 </nav>
                 
                 <div class="mobile-menu-toggle" id="mobileMenuToggle">
@@ -1421,9 +1421,9 @@
             </div>
             <a href="formula1.html" class="mobile-nav-link">Formula 1</a>
             <a href="home.html#pricing" class="mobile-nav-link">Pricing</a>
-            <a href="customer-service.html" class="mobile-nav-link">Customer Service</a>
-            <a href="home.html#brochures" class="mobile-nav-link">Brochures</a>
-            <a href="home.html#contact" class="mobile-nav-link nav-contact-button">Contact</a>
+                                    <a href="customer-service.html#contact" class="mobile-nav-link">Customer Service</a>
+            <a href="brochures.html" class="mobile-nav-link">Brochures</a>
+            <a href="customer-service.html" class="mobile-nav-link nav-contact-button">Contact</a>
         </div>
     </nav>
 
@@ -1841,9 +1841,11 @@
         </div>
     </footer>
 
-    <!-- Floating Video Button -->
-    <a href="index.html" class="floating-video-btn" title="Watch Dimple Video">
-        <div class="floating-video-icon"></div>
+
+
+    <!-- Back to Top Button -->
+    <a href="#" class="back-to-top" aria-label="Back to top" title="Back to top">
+        <span class="arrow-icon">↑</span>
     </a>
 
     <script src="script.js"></script>
