--- a/pricing.html
+++ b/pricing.html
@@ -629,7 +629,7 @@
                     </div>
                     <a href="formula1.html" class="nav-link">Formula 1</a>
                     <a href="pricing.html" class="nav-link active">Pricing</a>
-                    <a href="customer-service.html#contact" class="nav-link">Customer Service</a>
+                    <a href="customer-service.html" class="nav-link">Customer Service</a>
                     <a href="brochures.html" class="nav-link">Brochures</a>
                 </nav>
             </div>
