--- a/brochures.html
+++ b/brochures.html
@@ -468,9 +468,9 @@
                     </div>
                     <a href="formula1.html" class="nav-link">Formula 1</a>
                     <a href="home.html#pricing" class="nav-link">Pricing</a>
-                    <a href="customer-service.html#contact" class="nav-link">Customer Service</a>
+                    <a href="customer-service.html" class="nav-link">Customer Service</a>
                     <a href="brochures.html" class="nav-link active">Brochures</a>
-                    <a href="customer-service.html" class="nav-contact-button">Contact</a>
+                    <a href="customer-service.html#contact" class="nav-contact-button">Contact</a>
                 </nav>
                 
                 <div class="mobile-menu-toggle" id="mobileMenuToggle">
@@ -505,9 +505,9 @@
             </div>
             <a href="formula1.html" class="mobile-nav-link">Formula 1</a>
             <a href="home.html#pricing" class="mobile-nav-link">Pricing</a>
-                                    <a href="customer-service.html#contact" class="mobile-nav-link">Customer Service</a>
+                                    <a href="customer-service.html" class="mobile-nav-link">Customer Service</a>
             <a href="brochures.html" class="mobile-nav-link active">Brochures</a>
-            <a href="customer-service.html" class="mobile-nav-link nav-contact-button">Contact</a>
+            <a href="customer-service.html#contact" class="mobile-nav-link nav-contact-button">Contact</a>
         </div>
     </nav>
 
