--- a/wash-cloth.html
+++ b/wash-cloth.html
@@ -99,6 +99,10 @@
             }
         }
 
+        /* Mobile Hero Title Styles - Now handled in CSS file */
+
+        /* Fix the opacity issue on mobile - Now handled in CSS file */
+
         .washcloth-hero-content {
             position: relative;
             z-index: 3;
@@ -1384,9 +1388,9 @@
                     </div>
                     <a href="formula1.html" class="nav-link">Formula 1</a>
                                 <a href="home.html#pricing" class="nav-link">Pricing</a>
-                                <a href="customer-service.html#contact" class="nav-link">Customer Service</a>
+                                <a href="customer-service.html" class="nav-link">Customer Service</a>
                                 <a href="brochures.html" class="nav-link">Brochures</a>
-                    <a href="customer-service.html" class="nav-contact-button">Contact</a>
+                    <a href="customer-service.html#contact" class="nav-contact-button">Contact</a>
                 </nav>
                 
                 <div class="mobile-menu-toggle" id="mobileMenuToggle">
@@ -1421,9 +1425,9 @@
             </div>
             <a href="formula1.html" class="mobile-nav-link">Formula 1</a>
             <a href="home.html#pricing" class="mobile-nav-link">Pricing</a>
-                                    <a href="customer-service.html#contact" class="mobile-nav-link">Customer Service</a>
+                                    <a href="customer-service.html" class="mobile-nav-link">Customer Service</a>
             <a href="brochures.html" class="mobile-nav-link">Brochures</a>
-            <a href="customer-service.html" class="mobile-nav-link nav-contact-button">Contact</a>
+            <a href="customer-service.html#contact" class="mobile-nav-link nav-contact-button">Contact</a>
         </div>
     </nav>
 
