--- a/graphical-cleaning.html
+++ b/graphical-cleaning.html
@@ -1503,6 +1503,9 @@
     <div class="mobile-nav-overlay" id="mobileNavOverlay"></div>
     <nav class="mobile-nav-menu" id="mobileNavMenu">
         <div class="mobile-nav-header">
+            <div class="mobile-nav-brand">
+                <img src="images/logo-wit@2x.png" alt="Dimple Logo" class="mobile-logo-image">
+            </div>
             <button class="mobile-nav-close" id="mobileNavClose">×</button>
         </div>
         <div class="mobile-nav-links">
