--- a/manual-wiping.html
+++ b/manual-wiping.html
@@ -1369,6 +1369,12 @@
     <header class="header">
         <div class="container">
             <div class="navbar">
+                <div class="header-logo">
+                    <a href="home.html">
+                        <img src="images/logo-wit@2x.png" alt="Dimple Logo" class="logo-image">
+                    </a>
+                </div>
+                
                 <nav class="nav-menu">
                     <a href="home.html" class="nav-link">Home</a>
                     <a href="about.html" class="nav-link">About Dimple</a>
@@ -1447,10 +1453,10 @@
                     </p>
                     
                     <div class="hero-cta">
-                        <button class="cta-secondary" data-action="scroll-to-biocleaner">
+                        <a href="#biocleaner" class="cta-secondary" data-action="scroll-to-biocleaner">
                             <span class="cta-text">Explore</span>
                             <span class="cta-icon">↓</span>
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
