--- a/cassette-rolls.html
+++ b/cassette-rolls.html
@@ -1158,7 +1158,7 @@
                         </div>
                     </div>
                     <a href="formula1.html" class="nav-link">Formula 1</a>
-                    <a href="home.html#pricing" class="nav-link">Pricing</a>
+                    <a href="pricing.html" class="nav-link">Pricing</a>
                     <a href="customer-service.html" class="nav-link">Customer Service</a>
                     <a href="brochures.html" class="nav-link">Brochures</a>
                     <a href="customer-service.html#contact" class="nav-contact-button">Contact</a>
@@ -1186,9 +1186,9 @@
             <a href="home.html" class="mobile-nav-link">Home</a>
             <a href="about.html" class="mobile-nav-link">About Dimple</a>
             <div class="mobile-nav-dropdown">
-                <div class="mobile-nav-parent" id="graphicalCleaningToggle">
-                    <a href="graphical-cleaning.html" class="mobile-nav-link">Graphical Cleaning</a>
-                    <span class="mobile-dropdown-arrow">▼</span>
+                <div class="mobile-nav-parent expanded" id="graphicalCleaningToggle">
+                    <a href="graphical-cleaning.html" class="mobile-nav-parent-link">Graphical Cleaning</a>
+                    <span class="mobile-dropdown-arrow" id="graphicalCleaningArrow">▼</span>
                 </div>
                 <div class="mobile-nav-submenu active" id="graphicalCleaningSubmenu">
                     <a href="wash-cloth.html" class="mobile-nav-sublink">— Wash Cloth</a>
@@ -1198,8 +1198,8 @@
                 </div>
             </div>
             <a href="formula1.html" class="mobile-nav-link">Formula 1</a>
-            <a href="home.html#pricing" class="mobile-nav-link">Pricing</a>
-                                    <a href="customer-service.html" class="mobile-nav-link">Customer Service</a>
+            <a href="pricing.html" class="mobile-nav-link">Pricing</a>
+            <a href="customer-service.html" class="mobile-nav-link">Customer Service</a>
             <a href="brochures.html" class="mobile-nav-link">Brochures</a>
             <a href="customer-service.html#contact" class="mobile-nav-link nav-contact-button">Contact</a>
         </div>
