--- a/pricing.html
+++ b/pricing.html
@@ -712,7 +712,7 @@
         document.getElementById('convertingCost').textContent = '€' + converting.toFixed(2);
         document.getElementById('solventCost').textContent = '€' + solvent.toFixed(2);
         document.getElementById('coreCost').textContent = '€' + core.toFixed(2);
-        document.getElementById('packagingCost').textContent = '€' + PACKAGING.toFixed(2);
+        document.getElementById('packagingCost').textContent = '€' + packaging.toFixed(2);
         document.getElementById('surfaceArea').textContent = area.toFixed(2) + ' m²';
         
         document.getElementById('solventRow').style.display = rollType === 'wet' ? 'flex' : 'none';
