--- a/brochures.html
+++ b/brochures.html
@@ -482,32 +482,37 @@
         </div>
     </header>
 
-    <!-- Mobile Off-Canvas Menu -->
-    <div class="mobile-nav-overlay" id="mobileNavOverlay"></div>
-    <nav class="mobile-nav-menu" id="mobileNavMenu">
-        <div class="mobile-nav-header">
-            <button class="mobile-nav-close" id="mobileNavClose">×</button>
+    <!-- New Modern Mobile Menu -->
+    <div class="mobile-menu-overlay" id="mobileMenuOverlay"></div>
+    <nav class="mobile-menu" id="mobileMenu">
+        <div class="mobile-menu-header">
+            <div class="mobile-menu-logo">
+                <img src="images/logo-wit@2x.png" alt="Dimple Logo">
+                <span class="mobile-menu-logo-text">Dimple</span>
+            </div>
+            <button class="mobile-menu-close" id="mobileMenuClose">×</button>
         </div>
-        <div class="mobile-nav-links">
-            <a href="home.html" class="mobile-nav-link">Home</a>
-            <a href="about.html" class="mobile-nav-link">About Dimple</a>
-            <div class="mobile-nav-dropdown">
-                <div class="mobile-nav-parent" id="graphicalCleaningToggle">
-                    <a href="graphical-cleaning.html" class="mobile-nav-parent-link">Graphical Cleaning</a>
-                    <span class="mobile-dropdown-arrow" id="graphicalCleaningArrow">▼</span>
-                </div>
-                <div class="mobile-nav-submenu" id="graphicalCleaningSubmenu">
-                    <a href="wash-cloth.html" class="mobile-nav-sublink">— Wash Cloth</a>
-                    <a href="cassette-rolls.html" class="mobile-nav-sublink">— Cassette Rolls</a>
-                    <a href="winding-device.html" class="mobile-nav-sublink">— Winding Device</a>
-                    <a href="manual-wiping.html" class="mobile-nav-sublink">— Manual Wiping</a>
+        <div class="mobile-menu-nav">
+            <a href="home.html" class="mobile-menu-link">Home</a>
+            <a href="about.html" class="mobile-menu-link">About Dimple</a>
+            <div class="mobile-menu-dropdown">
+                <button class="mobile-menu-dropdown-toggle" id="graphicalCleaningToggle">
+                    <span>Graphical Cleaning</span>
+                    <span class="mobile-menu-dropdown-arrow">▼</span>
+                </button>
+                <div class="mobile-menu-submenu" id="graphicalCleaningSubmenu">
+                    <a href="graphical-cleaning.html" class="mobile-menu-sublink">Graphical Cleaning</a>
+                    <a href="wash-cloth.html" class="mobile-menu-sublink">Wash Cloth</a>
+                    <a href="cassette-rolls.html" class="mobile-menu-sublink">Cassette Rolls</a>
+                    <a href="winding-device.html" class="mobile-menu-sublink">Winding Device</a>
+                    <a href="manual-wiping.html" class="mobile-menu-sublink">Manual Wiping</a>
                 </div>
             </div>
-            <a href="formula1.html" class="mobile-nav-link">Formula 1</a>
-            <a href="pricing.html" class="mobile-nav-link">Pricing</a>
-            <a href="customer-service.html" class="mobile-nav-link">Customer Service</a>
-            <a href="brochures.html" class="mobile-nav-link active">Brochures</a>
-            <a href="customer-service.html#contact" class="mobile-nav-link nav-contact-button">Contact</a>
+            <a href="formula1.html" class="mobile-menu-link">Formula 1</a>
+            <a href="pricing.html" class="mobile-menu-link">Pricing</a>
+            <a href="customer-service.html" class="mobile-menu-link">Customer Service</a>
+            <a href="brochures.html" class="mobile-menu-link active">Brochures</a>
+            <a href="customer-service.html#contact" class="mobile-menu-contact">Contact Us</a>
         </div>
     </nav>
 
