--- a/about.html
+++ b/about.html
@@ -1245,8 +1245,7 @@
     <nav class="mobile-menu" id="mobileMenu">
         <div class="mobile-menu-header">
             <div class="mobile-menu-logo">
-                <img src="images/logo-wit@2x.png" alt="Dimple Logo">
-                <span class="mobile-menu-logo-text">Dimple</span>
+                <img src="images/logo greeen.png" alt="Dimple Logo" class="mobile-menu-logo-image">
             </div>
             <button class="mobile-menu-close" id="mobileMenuClose">×</button>
         </div>
@@ -1553,20 +1552,6 @@
                     </div>
                 </div>
                 
-                <div class="machines-cta-section">
-                    <div class="cta-content">
-                        <h3 class="cta-heading">A new concept, designed for you</h3>
-                        <p class="cta-description">
-                            Discover how our innovative machinery solutions can transform your production process and elevate your business to new heights.
-                        </p>
-                    </div>
-                    <div class="cta-button-wrapper">
-                        <button class="machines-cta-button" data-action="get-more-info">
-                            <span class="cta-text">Get More Information</span>
-                            <span class="cta-icon">→</span>
-                        </button>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
