--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
             font-weight: 300;
             color: var(--text-lighter);
             letter-spacing: 1px;
+            position: relative;
+            z-index: 2;
         }
 
         /* Enhanced Main Landing Container - Perfect viewport fit */
@@ -1764,6 +1766,7 @@
             color: #248457; font-weight: 700; text-align: center; font-size: 1.1rem;
             margin-top: 1.5rem;
         }
+
     </style>
 </head>
 <body>
@@ -1776,8 +1779,10 @@
     <div class="logo-section">
         <a href="home.html" class="logo">
             <img src="images/logo-wit@2x.png" alt="Dimple Logo" class="logo-image">
+            <span class="logo-tagline">Est. 1991</span>
         </a>
     </div>
+
 
     <!-- Main Landing Container -->
     <div class="landing-container">
@@ -2164,10 +2169,6 @@
         });
     </script>
 
-    <!-- Back to Top Button -->
-    <a href="#" class="back-to-top" aria-label="Back to top" title="Back to top">
-        <span class="arrow-icon">↑</span>
-    </a>
 
     <script src="script.js"></script>
 </body>
