--- a/formula1.html
+++ b/formula1.html
@@ -1395,8 +1395,7 @@
     <nav class="mobile-menu" id="mobileMenu">
         <div class="mobile-menu-header">
             <div class="mobile-menu-logo">
-                <img src="images/logo-wit@2x.png" alt="Dimple Logo">
-                <span class="mobile-menu-logo-text">Dimple</span>
+                <img src="images/logo greeen.png" alt="Dimple Logo" class="mobile-menu-logo-image">
             </div>
             <button class="mobile-menu-close" id="mobileMenuClose">×</button>
         </div>
